fix responsive hover on iOS

--- a/css/pub-theme-doc.css
+++ b/css/pub-theme-doc.css
@@ -1,5 +1,5 @@
 body { margin:0 auto; font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
-       font-size:18px; font-weight:200; color:#444; background-color:#fff; }
+       font-size:16px; font-weight:200; color:#444; background-color:#fff; }
 
 a { color:#4183c4; text-decoration:none; }
 
@@ -9,11 +9,11 @@ header { width:100%; position:fixed;
 #doctitle, #topmenu { display:inline-block; white-space:nowrap}
 #topmenu { float:right; }
 
-#doctitle h1 { display:inline-block; font-size:30px; margin:0 0 0 4px; line-height:31px; font-weight:200; transition:margin 0.4s; }
+#doctitle h1 { display:inline-block; font-size:30px; margin:0 0 0 4px; line-height:32px; font-weight:200; transition:margin 0.4s; }
 #doctitle p, #topmenu p, #navicon p { display:inline-block; margin:0; }
 #topmenu ul { list-style:none; padding:0; margin:0; }
-#topmenu li { display:inline-block; margin:0 8px; line-height:32px; }
-header a, header a:hover { color:#eee; text-decoration:none; }
+#topmenu li { display:inline-block; }
+header a, header a:hover { color:#eee; text-decoration:none; line-height:32px; }
 
 #navicon { position:fixed; top:0; left:0; z-index:200; color:#eee; cursor:pointer; }
 #navicon span.fa, #navicon span.icon { line-height:34px; opacity:0; transition:color 0.4s; }
@@ -22,7 +22,7 @@ header a, header a:hover { color:#eee; text-decoration:none; }
 #toc { position:fixed; top:32px; left:0; bottom:0; width:200px; padding-top:0.5em; overflow-y:auto; z-index:200; background-color:#f7f7f7; transition:left 0.4s; }
 #toc ul { list-style:none; margin:0; padding:0; }
 
-#toc a { display:block; font-size:16px; text-decoration:none; color:#555; padding:4px 10px; line-height:1.4; }
+#toc a { display:block; text-decoration:none; color:#555; padding:4px 10px; line-height:1.4; }
 #toc a:hover { color:#eee; background-color:#777; }
 
 #main { position:fixed; top:32px; left:200px; bottom:0; right:0; overflow-y:auto; transition:left 0.4s; }
@@ -37,6 +37,10 @@ header a, header a:hover { color:#eee; text-decoration:none; }
 #doctitle h1 { margin:0 0 0 34px; }
 #navicon:hover span.fa, #navicon:hover span.icon { line-height:36px; color:#fff; }
 #navicon:hover #toc { left:0; }
+}
+
+@media only screen and (max-width:600px) {
+#doctitle p { display:none; }
 }
 
 @media print {
